add interface para rcp calls

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,7 +25,7 @@ services:
     
   api_shop:
     build: ./api_shop/
-    command: python manage.py runserver 0.0.0.0:8000
+    command: gunicorn api_shop.wsgi:application -b 0.0.0.0:8000  --workers 3 --log-level=info
     volumes:
       - ./api_shop/:/code/
     ports:
