error de conexao fechada com rabbitmq django

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,7 +25,8 @@ services:
     
   api_shop:
     build: ./api_shop/
-    command: gunicorn api_shop.wsgi:application -b 0.0.0.0:8000  --workers 3 --log-level=info
+    #command: gunicorn api_shop.wsgi:application -b 0.0.0.0:8000  --workers 3 --log-level=info
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./api_shop/:/code/
     ports:
