--- a/worker_payer/package.json
+++ b/worker_payer/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node server.js"
+    "dev": "nodemon --watch . server.js "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "amqplib": "0.5.3",
     "uuid": "3.3.2",
-    "dotenv": "8.0.0"
+    "dotenv": "8.0.0",
+    "nodemon": "1.19.1"
   }
 }
