--- a/api_sale/package.json
+++ b/api_sale/package.json
@@ -14,6 +14,9 @@
     "nodemon": "1.19.1",
     "amqplib": "0.5.3",
     "uuid": "3.3.2",
-    "dotenv": "8.0.0"
+    "dotenv": "8.0.0",
+    "mongoose": "5.5.11",
+    "cors": "2.8.5",
+    "mongoose-paginate": "5.0.3"
   }
 }
